{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 21,
  "lineage": "ceb94de5-ce68-db82-4f7d-d61516a2a97e",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c80e2b6ccb9ad6d1",
            "arn": "arn:aws:ec2:us-east-2:160885268482:instance/i-0fd4e39503a98354f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd4e39503a98354f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "weather",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0146f8be2ab3454ae",
            "private_dns": "ip-172-31-19-163.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.163",
            "public_dns": "ec2-3-129-88-186.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.88.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-069d8a4e352a9151c",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "weather-sg-20241206045528516200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029540ece748d3355",
            "tags": {
              "Environment": "dev",
              "Name": "weather-server",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "jenkins-weather-server"
            },
            "vpc_security_group_ids": [
              "sg-09274b7e08c14e7cb"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.weather_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160885268482:security-group/sg-09274b7e08c14e7cb",
            "description": "Security group for weather app server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09274b7e08c14e7cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube port",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "weather-sg-20241206045528516200000001",
            "name_prefix": "weather-sg-",
            "owner_id": "160885268482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-sg"
            },
            "tags_all": {
              "Name": "weather-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-06ddb3071463254b3"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.weather_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic",
            "from_port": 0,
            "id": "sgrule-1958799995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-066efdf0c19836c4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.weather_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Jenkins port",
            "from_port": 8080,
            "id": "sgrule-177134480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-0be4c865035b20a16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-672150933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-0f6a1cc0e566deb9c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2962450463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-005d48699ab141d1b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-102315434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-012f5a7e47df4fb4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SonarQube port",
            "from_port": 9000,
            "id": "sgrule-2175092941",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09274b7e08c14e7cb",
            "security_group_rule_id": "sgr-04367ebe1f11fd5fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.weather_sg.aws_security_group.this",
            "module.weather_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}